[metadata]

name = subnet4
version = 0.1.0

description = subnet4 - a small and simple Python module with function to calculate the minimum subnet containing IP addresses from the input set

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/evbg/subnet4
author = Evgeny V. Bogodukhov
author_email = b@evbg.ru

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
#install_requires =
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = true
